#update - [x] 📅 2024-11-04 Modification from beta to release version. ✅ 2024-11-04 - [x] 📅 2024-11-04 Modified Angular & NodeJS sample file and fixed issue with false value not being applied to OPT parameter. ✅ 2024-11-04
